<resources>
    <string name="app_name">Minstrel</string>
    <string-array name="sidePanel_items">
        <item>Menu 1</item>
        <item>Menu 2</item>
    </string-array>
    <string name="search">Search</string>
    <string name="playlist">Playlist</string>
    <string name="search_hint">Search songs</string>
    <string name="view_count">%d views</string>
    <string name="history">Previously played</string>
    <string name="popular">Popular content</string>
    <string name="myMusic">My music</string>
    <string name="undo">Undo</string>
    <string name="enqueue_now">Play now</string>
    <string name="enqueue_next">Play next</string>
    <string name="enqueue_last">Play last</string>
    <string name="playable_now">Play now</string>
    <string name="playable_next">Move next</string>
    <string name="playable_last">Move last</string>
    <string name="playable_remove">Remove</string>
    <string name="about">About</string>
    <string name="about_text">Minstrel is a free and open source application hosted on GitHub. For any feature request or suggestion, feel free to fill an issue on the repository page.</string>
    <string name="license_text">This application is distributed under the terms of GNU GPL</string>
    <string name="to_repository">Open on GitHub</string>
    <string name="parameters">Preferences</string>
    <string name="playlist_preferences">Player</string>
    <string name="never_ending_playlist_summary">Enable automatic addition of a related song to playlist when the last song finishes</string>
    <string name="never_ending_playlist_title">Never Ending Playlist</string>
    <string name="interface_preferences">Interface</string>
    <string name="manage_brightness_summary">Enable brightness reduction when inactivity is detected</string>
    <string name="manage_brightness_title">Manage Brightness</string>
    <string name="dark_theme_preference_title">Use Dark Theme</string>
    <string name="screen_rotation_disabled_preference_title">Disable Screen Rotation</string>
    <string name="screen_rotation_disabled_preference_summary">Screen rotation restarts YouTube player. A few seconds are required before restarting the video</string>
    <string name="show_undo_dialog_title">Display Undo Option</string>
    <string name="show_undo_dialog_summary">Show the undo option when a song is added to the list</string>
</resources>
